--- a/example.env
+++ b/example.env
@@ -1,21 +1,19 @@
 API_KEY_OPENAI=
-API_KEY_ANTHROPIC=
-API_KEY_GROQ=
 API_KEY_PERPLEXITY=
 API_KEY_GOOGLE=
 API_KEY_MISTRAL=
 API_KEY_OPENROUTER=
-API_KEY_SAMBANOVA=
+#API_KEY_SAMBANOVA=
 
-API_KEY_OPENAI_AZURE=
-OPENAI_AZURE_ENDPOINT=
-OPENAI_API_VERSION=
+#API_KEY_OPENAI_AZURE=
+#OPENAI_AZURE_ENDPOINT=
+#OPENAI_API_VERSION=
 
 HF_TOKEN=
+DEFAULT_USER_TIMEZONE="America/New_York"
 
-
-WEB_UI_PORT=50001
-USE_CLOUDFLARE=false
+WEB_UI_PORT="50001"
+USE_CLOUDFLARE="false"
 
 
 OLLAMA_BASE_URL="http://127.0.0.1:11434"
@@ -24,5 +22,7 @@ OPEN_ROUTER_BASE_URL="https://openrouter.ai/api/v1"
 SAMBANOVA_BASE_URL="https://fast-api.snova.ai/v1"
 
 
-TOKENIZERS_PARALLELISM=true
-PYDEVD_DISABLE_FILE_VALIDATION=1
+TOKENIZERS_PARALLELISM="true"
+PYDEVD_DISABLE_FILE_VALIDATION="1"
+
+ROOT_PASSWORD=
